--- a/Demo/templates/base.html.twig
+++ b/Demo/templates/base.html.twig
@@ -14,6 +14,10 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+        <h1>
+            Hi {{ name | capitalize }}
+        </h1>
+        {% endblock %}
     </body>
 </html>
